modules/gdscript/tests/scripts/analyzer/errors/for_loop_wrong_specified_type_with_literal_array.gd
# GH-82021

func test():
	for x: String in [1, 2, 3]:
		print(x)
